fix weird main page spacing and add "banner"

--- a/web/static/web/scss/_style.scss
+++ b/web/static/web/scss/_style.scss
@@ -37,11 +37,6 @@ p {
 	line-height: 1.5;
 }
 
-ul li, ol li {
-	margin-top: 0.7em;
-	margin-bottom: 0.7em;
-}
-
 h1, h2, h3 { font-weight: 500; }
 h4, h5, h6 { font-weight: 400; }
 
